--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ambulance-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ambulance.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EMS Inventory Tracker</title>
   </head>
@@ -11,4 +11,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
